--- a/classroom/Case study HTML/css/caseStyleSheet.css
+++ b/classroom/Case study HTML/css/caseStyleSheet.css
@@ -68,7 +68,7 @@ body{
 
 .logoC{
     position: absolute;
-    top: 3px;
+    top: 10px;
     left: 10px;
     width: 45px;
     position: fixed;
@@ -81,7 +81,7 @@ body{
 }
 
 .cartIcon{
-    position:absolute;
+    position: absolute;
     top: 15px;
     left: 45vw;
     width: 45px;
@@ -89,6 +89,8 @@ body{
 }
 
 .navC{
+	position: relative;
+    display: inline-block;
     color: white;
     height: auto;
     width: 100%;
@@ -99,15 +101,35 @@ body{
 }
 
 .navBtn{
+	position: relative;
     font-size: 2.5em;
-    display: block;
+    display: inline-block;
     width: 20%;
     margin: 0 4vw 0 73vw;
     padding: 7px 3%;
     text-align: center;
     cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.5)
+    background-color: rgba(0, 0, 0, 0.5);
+	
+}   
+
+.menuItems{
+	display: none;
+	position: absolute;
+	right: 100px;
+	background-color: #f9f9f9;
+	min-width: 160px;
+	z-index: 1;
 }
+
+.menuItems a{
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+}
+
+.show{display: block;}
 /*h1{
     color: blue;
 }*/
